// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dashboard converter convert dashboard should convert dashboard with export temp filter context 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": undefined,
  "description": "",
  "filterContext": Object {
    "created": "2020-05-05 00:00:00",
    "filters": Array [],
    "ref": Object {
      "uri": "/tempFilterContext",
    },
    "uri": "/tempFilterContext",
  },
  "identifier": "dashboardWithFilterContext",
  "isLocked": false,
  "layout": undefined,
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/dashboardWithFilterContext",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "dashboardWithFilterContext",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/dashboardWithFilterContext",
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with extended date filters config 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": Object {
    "addPresets": undefined,
    "filterName": "Filter",
    "hideGranularities": Array [
      "GDC.time.month",
    ],
    "hideOptions": undefined,
    "mode": "active",
  },
  "description": "",
  "filterContext": undefined,
  "identifier": "dashboardWithExtendedDateFilterConfig",
  "isLocked": false,
  "layout": undefined,
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/dashboardWithExtendedDateFilterConfig",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "dashboardWithExtendedDateFilterConfig",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/dashboardWithExtendedDateFilterConfig",
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with filter context 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": undefined,
  "description": "",
  "filterContext": Object {
    "description": "",
    "filters": Array [
      Object {
        "attributeFilter": Object {
          "attributeElements": Object {
            "uris": Array [
              "/test",
              "/test2",
            ],
          },
          "displayForm": Object {
            "uri": "/displayForm",
          },
          "filterElementsBy": Array [],
          "localIdentifier": "parent",
          "negativeSelection": false,
        },
      },
      Object {
        "attributeFilter": Object {
          "attributeElements": Object {
            "uris": Array [
              "/test3",
              "/test4",
            ],
          },
          "displayForm": Object {
            "uri": "/displayForm34",
          },
          "filterElementsBy": Array [
            Object {
              "filterLocalIdentifier": "parent",
              "over": Object {
                "attributes": Array [
                  Object {
                    "uri": "attribute/uri",
                  },
                ],
              },
            },
          ],
          "localIdentifier": "child",
          "negativeSelection": false,
        },
      },
      Object {
        "dateFilter": Object {
          "attribute": Object {
            "uri": "testAttr",
          },
          "from": "-10",
          "granularity": "GDC.time.month",
          "to": "0",
          "type": "relative",
        },
      },
    ],
    "identifier": "filterContext",
    "ref": Object {
      "uri": "/gdc/md/obj/filterContext",
    },
    "title": "filterContext",
    "uri": "/gdc/md/obj/filterContext",
  },
  "identifier": "dashboardWithFilterContext",
  "isLocked": false,
  "layout": undefined,
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/dashboardWithFilterContext",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "dashboardWithFilterContext",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/dashboardWithFilterContext",
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with layout 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": undefined,
  "description": "",
  "filterContext": undefined,
  "identifier": "dashboardWithFilterContext",
  "isLocked": false,
  "layout": Object {
    "sections": Array [
      Object {
        "items": Array [
          Object {
            "size": Object {
              "xl": Object {
                "gridWidth": 12,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "localIdentifier": "m1",
                    },
                    "type": "drillFromMeasure",
                  },
                  "target": Object {
                    "identifier": "dashboardId",
                  },
                  "transition": "in-place",
                  "type": "drillToDashboard",
                },
              ],
              "identifier": "visualizationWidgetHeadline",
              "ignoreDashboardFilters": Array [
                Object {
                  "displayForm": Object {
                    "uri": "/gdc/md/displayForm",
                  },
                  "type": "attributeFilterReference",
                },
              ],
              "insight": Object {
                "uri": "/gdc/md/obj/visualizationHeadline",
              },
              "properties": Object {},
              "ref": Object {
                "uri": "/gdc/md/obj/visualizationWidgetHeadline",
              },
              "title": "visualizationWidgetHeadline",
              "type": "insight",
              "uri": "/gdc/md/obj/visualizationWidgetHeadline",
            },
          },
          Object {
            "size": Object {
              "xl": Object {
                "gridWidth": 6,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "localIdentifier": "m1",
                    },
                    "type": "drillFromMeasure",
                  },
                  "target": Object {
                    "uri": "/targetVisualization",
                  },
                  "transition": "pop-up",
                  "type": "drillToInsight",
                },
              ],
              "identifier": "visualizationWidgetBarChart",
              "ignoreDashboardFilters": Array [],
              "insight": Object {
                "uri": "/gdc/md/obj/visualizationBarChart",
              },
              "properties": Object {},
              "ref": Object {
                "uri": "/gdc/md/obj/visualizationWidgetBarChart",
              },
              "title": "visualizationWidgetBarChart",
              "type": "insight",
              "uri": "/gdc/md/obj/visualizationWidgetBarChart",
            },
          },
          Object {
            "size": Object {
              "xl": Object {
                "gridWidth": 2,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "uri": "/measure",
                    },
                    "type": "drillFromMeasure",
                  },
                  "tab": "testTab",
                  "target": Object {
                    "uri": "test",
                  },
                  "transition": "in-place",
                  "type": "drillToLegacyDashboard",
                },
              ],
              "identifier": "kpiWidget",
              "ignoreDashboardFilters": Array [],
              "kpi": Object {
                "comparisonDirection": "growIsGood",
                "comparisonType": "previousPeriod",
                "metric": Object {
                  "uri": "/measure",
                },
              },
              "ref": Object {
                "uri": "/gdc/md/obj/kpiWidget",
              },
              "title": "kpiWidget",
              "type": "kpi",
              "uri": "/gdc/md/obj/kpiWidget",
            },
          },
        ],
        "type": "IDashboardLayoutSection",
      },
    ],
    "type": "IDashboardLayout",
  },
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/dashboardWithFilterContext",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "dashboardWithFilterContext",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/dashboardWithFilterContext",
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with layout with custom gridHeight 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": undefined,
  "description": "",
  "filterContext": undefined,
  "identifier": "dashboardWithFilterContext",
  "isLocked": false,
  "layout": Object {
    "sections": Array [
      Object {
        "items": Array [
          Object {
            "size": Object {
              "xl": Object {
                "gridHeight": 12,
                "gridWidth": 12,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "localIdentifier": "m1",
                    },
                    "type": "drillFromMeasure",
                  },
                  "target": Object {
                    "identifier": "dashboardId",
                  },
                  "transition": "in-place",
                  "type": "drillToDashboard",
                },
              ],
              "identifier": "visualizationWidgetHeadline",
              "ignoreDashboardFilters": Array [
                Object {
                  "displayForm": Object {
                    "uri": "/gdc/md/displayForm",
                  },
                  "type": "attributeFilterReference",
                },
              ],
              "insight": Object {
                "uri": "/gdc/md/obj/visualizationHeadline",
              },
              "properties": Object {},
              "ref": Object {
                "uri": "/gdc/md/obj/visualizationWidgetHeadline",
              },
              "title": "visualizationWidgetHeadline",
              "type": "insight",
              "uri": "/gdc/md/obj/visualizationWidgetHeadline",
            },
          },
          Object {
            "size": Object {
              "xl": Object {
                "gridHeight": 6,
                "gridWidth": 6,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "localIdentifier": "m1",
                    },
                    "type": "drillFromMeasure",
                  },
                  "target": Object {
                    "uri": "/targetVisualization",
                  },
                  "transition": "pop-up",
                  "type": "drillToInsight",
                },
              ],
              "identifier": "visualizationWidgetBarChart",
              "ignoreDashboardFilters": Array [],
              "insight": Object {
                "uri": "/gdc/md/obj/visualizationBarChart",
              },
              "properties": Object {},
              "ref": Object {
                "uri": "/gdc/md/obj/visualizationWidgetBarChart",
              },
              "title": "visualizationWidgetBarChart",
              "type": "insight",
              "uri": "/gdc/md/obj/visualizationWidgetBarChart",
            },
          },
          Object {
            "size": Object {
              "xl": Object {
                "gridHeight": 6,
                "gridWidth": 2,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "uri": "/measure",
                    },
                    "type": "drillFromMeasure",
                  },
                  "tab": "testTab",
                  "target": Object {
                    "uri": "test",
                  },
                  "transition": "in-place",
                  "type": "drillToLegacyDashboard",
                },
              ],
              "identifier": "kpiWidget",
              "ignoreDashboardFilters": Array [],
              "kpi": Object {
                "comparisonDirection": "growIsGood",
                "comparisonType": "previousPeriod",
                "metric": Object {
                  "uri": "/measure",
                },
              },
              "ref": Object {
                "uri": "/gdc/md/obj/kpiWidget",
              },
              "title": "kpiWidget",
              "type": "kpi",
              "uri": "/gdc/md/obj/kpiWidget",
            },
          },
        ],
        "type": "IDashboardLayoutSection",
      },
    ],
    "type": "IDashboardLayout",
  },
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/dashboardWithFilterContext",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "dashboardWithFilterContext",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/dashboardWithFilterContext",
}
`;

exports[`dashboard converter convert dashboard should convert dashboard without layout, and create implicit layout 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": undefined,
  "description": "",
  "filterContext": undefined,
  "identifier": "dashboardWithFilterContext",
  "isLocked": false,
  "layout": Object {
    "sections": Array [
      Object {
        "items": Array [
          Object {
            "size": Object {
              "xl": Object {
                "gridWidth": 12,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "localIdentifier": "m1",
                    },
                    "type": "drillFromMeasure",
                  },
                  "target": Object {
                    "uri": "/targetVisualization",
                  },
                  "transition": "pop-up",
                  "type": "drillToInsight",
                },
              ],
              "identifier": "visualizationWidgetBarChart",
              "ignoreDashboardFilters": Array [],
              "insight": Object {
                "uri": "/gdc/md/obj/visualizationBarChart",
              },
              "properties": Object {},
              "ref": Object {
                "uri": "/gdc/md/obj/visualizationWidgetBarChart",
              },
              "title": "visualizationWidgetBarChart",
              "type": "insight",
              "uri": "/gdc/md/obj/visualizationWidgetBarChart",
            },
          },
          Object {
            "size": Object {
              "xl": Object {
                "gridWidth": 2,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "uri": "/measure",
                    },
                    "type": "drillFromMeasure",
                  },
                  "tab": "testTab",
                  "target": Object {
                    "uri": "test",
                  },
                  "transition": "in-place",
                  "type": "drillToLegacyDashboard",
                },
              ],
              "identifier": "kpiWidget",
              "ignoreDashboardFilters": Array [],
              "kpi": Object {
                "comparisonDirection": "growIsGood",
                "comparisonType": "previousPeriod",
                "metric": Object {
                  "uri": "/measure",
                },
              },
              "ref": Object {
                "uri": "/gdc/md/obj/kpiWidget",
              },
              "title": "kpiWidget",
              "type": "kpi",
              "uri": "/gdc/md/obj/kpiWidget",
            },
          },
          Object {
            "size": Object {
              "xl": Object {
                "gridWidth": 2,
              },
            },
            "type": "IDashboardLayoutItem",
            "widget": Object {
              "dateDataSet": undefined,
              "description": "",
              "drills": Array [
                Object {
                  "origin": Object {
                    "measure": Object {
                      "localIdentifier": "m1",
                    },
                    "type": "drillFromMeasure",
                  },
                  "target": Object {
                    "identifier": "dashboardId",
                  },
                  "transition": "in-place",
                  "type": "drillToDashboard",
                },
              ],
              "identifier": "visualizationWidgetHeadline",
              "ignoreDashboardFilters": Array [
                Object {
                  "displayForm": Object {
                    "uri": "/gdc/md/displayForm",
                  },
                  "type": "attributeFilterReference",
                },
              ],
              "insight": Object {
                "uri": "/gdc/md/obj/visualizationHeadline",
              },
              "properties": Object {},
              "ref": Object {
                "uri": "/gdc/md/obj/visualizationWidgetHeadline",
              },
              "title": "visualizationWidgetHeadline",
              "type": "insight",
              "uri": "/gdc/md/obj/visualizationWidgetHeadline",
            },
          },
        ],
        "type": "IDashboardLayoutSection",
      },
    ],
    "type": "IDashboardLayout",
  },
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/dashboardWithFilterContext",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "dashboardWithFilterContext",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/dashboardWithFilterContext",
}
`;

exports[`dashboard converter convert dashboard should convert empty dashboard 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": undefined,
  "description": "",
  "filterContext": undefined,
  "identifier": "emptyDashboard",
  "isLocked": false,
  "layout": undefined,
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/emptyDashboard",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "emptyDashboard",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/emptyDashboard",
}
`;

exports[`dashboard converter convert dashboard should override dashboard filter context with export filter context 1`] = `
Object {
  "created": "2020-05-05 00:00:00",
  "createdBy": undefined,
  "dateFilterConfig": undefined,
  "description": "",
  "filterContext": Object {
    "description": "",
    "filters": Array [],
    "identifier": "exportFilterContext",
    "ref": Object {
      "uri": "/gdc/md/obj/exportFilterContext",
    },
    "title": "exportFilterContext",
    "uri": "/gdc/md/obj/exportFilterContext",
  },
  "identifier": "dashboardWithFilterContext",
  "isLocked": false,
  "layout": undefined,
  "plugins": undefined,
  "ref": Object {
    "uri": "/gdc/md/obj/dashboardWithFilterContext",
  },
  "shareStatus": "public",
  "tags": Array [],
  "title": "dashboardWithFilterContext",
  "type": "IDashboard",
  "updated": "2020-05-05 10:10:10",
  "updatedBy": undefined,
  "uri": "/gdc/md/obj/dashboardWithFilterContext",
}
`;
